--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
+  max-width: 600px;
+  margin: 10px auto;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: radial-gradient(
+    506px at 50.6% 16.5%,
+    rgb(239, 252, 250) 5.5%,
+    rgb(184, 198, 204) 100.2%
+  );
+}
+
+h1 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: block;
+  margin: 0 auto 10px;
+  width: 400px;
+  padding: 6px;
+}
+
+ul li {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 2px;
+  list-style: none;
+  font-family: monospace;
+  margin-right: 30px;
 }
